# meson-abc

./: .gitignore
hello/: greet_test.cpp  hello.h  main.cpp  meson.build
hello/pch/: my_pch.h
t_xxhash/: greet_test.cpp  meson.build  xxh64int_test.cpp
t_xxhash/pch/: my_pch.h
t_xxhash/subprojects/: xxhash.wrap
